# graduation-design

./: .gitignore  README.md  batch_diagnose.py  webapp.py
analyzer/: Makefile
analyzer/src/: CMakeLists.txt
analyzer/src/AcademicChecks/: AcademicChecker.cc
analyzer/src/AcademicChecks/BufferOverflow/: BufferOverflowPass.cc  BufferOverflowPass.h
analyzer/src/AcademicChecks/Core/: CheckCommon.cc  CheckCommon.h
analyzer/src/AcademicChecks/DoubleFree/: DoubleFreePass.cc  DoubleFreePass.h
analyzer/src/AcademicChecks/IntegerOverflow/: IntegerOverflowPass.cc  IntegerOverflowPass.h
analyzer/src/AcademicChecks/NullPointerDeref/: NullPointerDerefPass.cc  NullPointerDerefPass.h
analyzer/src/AcademicChecks/UAF/: UAFPass.cc  UAFPass.h
analyzer/src/configs/: configs.toml
analyzer/src/utils/: Analyzer.h  Common.cc  Common.h  DBTools.cc  DBTools.h  Errors.h  Tools.cc  Tools.h  format.hh  include_llvm.h  toml.hpp  typedef.h  utils.cc  utils.h  utils_macro.h
diagnose/2026-03-08^18:20:35/: Bug_Report_complex_bug_buffer.txt  Bug_Report_complex_bug_chain_uaf_df.txt  Bug_Report_complex_bug_null.txt  Bug_Report_complex_safe_memory_2.txt  Bug_Report_cross_file_bug_entry.txt  Bug_Report_test_simplechecker.txt
diagnose/2026-03-11^22:11:13/: Bug_Report_complex_bug_buffer.txt  Bug_Report_complex_bug_integer.txt  Bug_Report_complex_bug_null.txt  Bug_Report_showcase__bo_alias_field_bug.txt  Bug_Report_showcase__bo_context_bug.txt  Bug_Report_showcase__npd_call_bug.txt  Bug_Report_showcase_cross_bug_entry.txt  Bug_Report_showcase_cross_safe_entry.txt  Bug_Report_test_simplechecker.txt
diagnose/2026-04-07^11:23:52/: Bug_Report_complex_bug_buffer.txt  Bug_Report_complex_bug_integer.txt  Bug_Report_complex_bug_null.txt  Bug_Report_cross_file_bug_entry.txt  Bug_Report_cross_file_safe_entry.txt  Bug_Report_showcase__npd_call_bug.txt  Bug_Report_showcase_cross_safe_entry.txt
inputfile/: complex_bug_buffer.c  complex_bug_chain_uaf_df.c  complex_bug_integer.c  complex_bug_null.c  complex_safe_memory_1.c  complex_safe_memory_2.c  cross_file_bug_entry.c  cross_file_safe_entry.c  showcase_cross_bug_entry.c  showcase_cross_safe_entry.c  test_simplechecker.c
inputfile/cross_file_bug/: module_api.h  module_controller.inc  module_memory.inc  module_use.inc
inputfile/cross_file_safe/: module_api.h  module_controller.inc  module_memory.inc
inputfile/showcase/: bo_alias_field_bug.c  bo_context_bug.c  bo_context_safe.c  npd_call_bug.c  npd_call_safe.c  npd_path_bug.c  npd_path_safe.c
inputfile/showcase_cross_bug/: module_api.h  module_use.inc  (+3 more)
(+12 files in other folders)
